dotted/dashed borders rendering with Qpainter surface very slow - bug 432453. r=vladimir